// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/DataButton isLoading 1`] = `
<ForwardRef(WithStyles)
  onClick={[Function]}
>
  Mengirim
</ForwardRef(WithStyles)>
`;

exports[`src/components/elements/DataButton render 1`] = `
<ForwardRef(WithStyles)
  onClick={[Function]}
/>
`;
